// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test ToDos component should match with snapshot when status is \`failed\` 1`] = `
<div>
  <div
    class="card toDos"
  >
    <div
      class="errorMessage"
    >
      Something went wrong. Could you please contact administrator.
    </div>
  </div>
</div>
`;

exports[`Test ToDos component should match with snapshot when status is \`loading\` 1`] = `
<div>
  <div
    class="card toDos"
  >
    <p
      class="loading"
    >
      Loading...
    </p>
  </div>
</div>
`;

exports[`Test ToDos component should match with snapshot when status is \`succeeded\` 1`] = `
<div>
  <div
    class="card toDos"
  >
    <div
      class="card toDoList"
    >
      <ul
        data-rbd-droppable-context-id="0"
        data-rbd-droppable-id="toDoList"
      >
        <li
          aria-describedby="rbd-hidden-text-0-hidden-text-0"
          data-rbd-drag-handle-context-id="0"
          data-rbd-drag-handle-draggable-id="1"
          data-rbd-draggable-context-id="0"
          data-rbd-draggable-id="1"
          draggable="false"
          role="button"
          tabindex="0"
        >
          <input
            class="isCompletedCheckBox"
            role="todo-item-checkbox"
            type="checkbox"
          />
          <div
            class="toDoText false"
            role="todo-item-text"
          >
            ToDo1
          </div>
          <button
            class="deleteButton"
            role="todo-item-delete-button"
            type="button"
          >
            Delete
          </button>
        </li>
        <li
          aria-describedby="rbd-hidden-text-0-hidden-text-0"
          data-rbd-drag-handle-context-id="0"
          data-rbd-drag-handle-draggable-id="2"
          data-rbd-draggable-context-id="0"
          data-rbd-draggable-id="2"
          draggable="false"
          role="button"
          tabindex="0"
        >
          <input
            checked=""
            class="isCompletedCheckBox"
            role="todo-item-checkbox"
            type="checkbox"
          />
          <div
            class="toDoText crossed"
            role="todo-item-text"
          >
            ToDo2
          </div>
          <button
            class="deleteButton"
            role="todo-item-delete-button"
            type="button"
          >
            Delete
          </button>
        </li>
      </ul>
    </div>
    <div
      class="footer"
    >
      <span
        role="to-do-item-amount"
      >
        2
         Item left
      </span>
      <div>
        <button
          class="filterButton"
          type="button"
        >
          All
        </button>
        <button
          class="filterButton"
          type="button"
        >
          Active
        </button>
        <button
          class="filterButton"
          type="button"
        >
          Completed
        </button>
      </div>
      <button
        class="completeAllButton"
        type="button"
      >
        Clear Completed
      </button>
    </div>
  </div>
</div>
`;
